--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -1,4 +1,76 @@
 /*
+ * Code formatting
+ */
+
+$syntax-background: #f5f5f5;
+$syntax-border: #eee;
+$syntax-font-family: monospace;
+$syntax-font-size: 15px;
+
+@mixin codecommon() {
+  font-family: $syntax-font-family;
+  font-size: $syntax-font-size;
+  border-radius: 3px;
+  background-color: $syntax-background;  
+}
+
+// Linenos - so that the line numbers are not selectable
+@mixin unselectable() {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+// Linenos
+@mixin opacity($opacity) {
+  opacity: $opacity;
+  $opacity-ie: $opacity * 100;
+  filter: alpha(opacity=$opacity-ie); //IE8
+}
+
+code {
+  @include codecommon();
+  padding: 1px 5px;
+}
+
+.highlight, .highlighter-rouge {
+  pre {
+    @include codecommon();
+    border: 1px solid $syntax-border;
+    padding: 8px 12px;
+    overflow-x: auto;
+    > code {
+      border: 0;
+      padding-right: 0;
+      padding-left: 0;
+    }
+  }
+  // Linenos
+  pre.lineno {
+    border: none;
+    @include opacity(0.6);  
+  }
+  // Linenos
+  .lineno {
+    @include unselectable();
+  }
+  // Linenos
+  .gutter {
+    border-right: 1px solid #ccc;
+  }
+  // Linenos
+  pre {
+    pre {
+      border: none;
+      margin-bottom: 0px;
+    }
+  }
+}
+
+/*
  * Pick a syntax highlight style.
  * Uncomment one only!
  */
@@ -35,4 +107,3 @@
 // @import "highlight-themes/rouge/_molokai.scss";
 // @import "highlight-themes/rouge/_monokai.scss";
 // @import "highlight-themes/rouge/_thankful_eyes.scss";
-
