--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,6 +2,11 @@
  * Reset some basic elements
  */
 
+html, body {
+  min-height: 100%;
+  height: 100%;
+}
+
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
@@ -114,6 +119,8 @@ blockquote {
   width: 1000px;
   margin-right: auto;
   margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
   box-sizing: border-box;
   border-bottom: 1px solid #e8e8e8;
   &:after {
@@ -127,8 +134,6 @@ blockquote {
   .wrapper {
     max-width: 1000px;
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
   }
 }
 
@@ -352,8 +357,8 @@ blockquote {
 .page-content {
   padding-top: 130px;
   > .wrapper {
-    padding-left: 175px;
-    padding-right: 175px;
+    padding-left: 75px;   // Width of page >1000px
+    padding-right: 75px;
     padding-bottom: 50px;
   }
 }
@@ -380,8 +385,8 @@ blockquote {
   list-style: none;
   > li {
     border-bottom: 1px solid #e8e8e8;
-    padding-top: 85px;
-    padding-bottom: 85px;
+    padding-top: 25px;   	// Padding between articles
+    padding-bottom: 25px;
     > h2 {
       margin-bottom: 26px;
       text-align: center;
