--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -432,15 +432,14 @@ blockquote {
   margin-bottom: 20px;
 }
 
-@media screen and (max-width: 600px) {
-  .post-excerpt {
-    font-size: 13px;
-  }
+.read-more {
+  padding-top: 0px;
 }
 
-.read-more {
-  font-size: 16px;
-  padding-top: 10px;
+@media screen and (max-width: 600px) {
+  .post-excerpt, .read-more {
+    font-size: 13px;
+  }
 }
 
 .post-link {
