Added the lightbox feature using Slimbox2. Replaced remote JQuery with local JQuery. Integrated lightbox feature into stylesheet and posts template. Added lightbox test page using some of my own images.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
 
     {% include footer.html %}
 
+    {% include jquery_js.html %}
+    {% include lightbox_js.html %}
     <script>
       $(window).scroll(function() {
         if ($('body').scrollTop() !== 0) {
