Added padding to anchor targets to prevent anchor from being hidden behind page header.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -96,6 +96,17 @@ a {
 }
 
 /**
+ * Anchors
+ */
+
+:target:before {
+  content: "";
+  display: block;
+  height: 60px;
+  margin: -60px 0 0;
+}
+
+/**
  * Blockquotes
  */
 
