--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,8 @@
       </a>
 
       <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
+        <a class="page-link" href="{{ '/about/' | prepend: site.baseurl }}">About</a>
+        <a class="page-link" href="{{ '/archives/' | prepend: site.baseurl }}">Archives</a>
       </div>
     </nav>
 
