--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -295,71 +295,23 @@ blockquote {
   > .wrapper {
     border-bottom: none;
   }
-  p {
-    font-size: 12px;
-  }
   a {
     color: #5e676d;
     &:hover {
-      color: #808080;
+      color: #51b9db;
     }
   }
 }
 
-.footer-heading {
+.footer-social {
   font-size: 18px;
-  margin-bottom: 15px;
+  text-align: center;
 }
 
-.page-list, .contact-list, .social-media-list {
-  list-style: none;
-  line-height: 30px;
-  margin-left: 0;
-}
-
-.footer-col-wrapper {
-  font-size: 15px;
-  margin-left: -15px;
-}
-
-.footer-col {
-  float: left;
-  margin-bottom: 15px;
-  padding-left: 15px;
-}
-
-.footer-col-1 {
-  width: -webkit-calc(35% - (30px / 2));
-  width: calc(35% - (30px / 2));
-}
-
-.footer-col-2 {
-  width: -webkit-calc(20% - (30px / 2));
-  width: calc(20% - (30px / 2));
-}
-
-.footer-col-3 {
-  width: -webkit-calc(45% - (30px / 2));
-  width: calc(45% - (30px / 2));
-}
-
-@media screen and (max-width: 800px) {
-  .footer-col-1, .footer-col-2 {
-    width: -webkit-calc(50% - (30px / 2));
-    width: calc(50% - (30px / 2));
-  }
-  .footer-col-3 {
-    width: -webkit-calc(100% - (30px / 2));
-    width: calc(100% - (30px / 2));
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .footer-col {
-    float: none;
-    width: -webkit-calc(100% - (30px / 2));
-    width: calc(100% - (30px / 2));
-  }
+.footer-disclaimer {
+  font-size: 12px;
+  text-align: center;
+  padding: 15px 0;
 }
 
 /**
