Moved the 'blog' to the journal path.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
       <div class="trigger">
         <a class="page-link" href="{{ '/about/' | prepend: site.baseurl }}">About</a>
         <a class="page-link" href="{{ '/archives/' | prepend: site.baseurl }}">Archives</a>
+        <a class="page-link" href="{{ '/journal/' | prepend: site.baseurl }}">Journal</a>
       </div>
     </nav>
 
