--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,5 +1,5 @@
 {% if site.comments and page.comments %}
-<div class="page-comments">
+<div id="page-comments" class="page-comments">
   <div class="wrapper">
     <div id="disqus_thread"></div>
     <script>
