--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
   <div class="wrapper">
 
     <div class="footer-social">
-      <a href="{{ site.author.github }}" target="_blank"><i class="icon icon-github"></i></a>
-      <a href="{{ site.author.twitter }}" target="_blank"><i class="icon icon-twitter"></i></a>
-      <a href="{{ site.author.facebook }}" target="_blank"><i class="icon icon-facebook"></i></a>
-      <a href="{{ site.author.linkedin }}" target="_blank"><i class="icon icon-linkedin"></i></a>
-      <a href="{{ site.author.email }}" target="_blank"><i class="icon icon-mail-alt"></i></a>
+      <a href="{{ site.author.github }}" target="_blank"><span class="icon icon-github"></span></a>
+      <a href="{{ site.author.twitter }}" target="_blank"><span class="icon icon-twitter"></span></a>
+      <a href="{{ site.author.facebook }}" target="_blank"><span class="icon icon-facebook"></span></a>
+      <a href="{{ site.author.linkedin }}" target="_blank"><span class="icon icon-linkedin"></span></a>
+      <a href="{{ site.author.email }}" target="_blank"><span class="icon icon-mail-alt"></span></a>
     </div>
 
     <div class="footer-disclaimer">
