--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if site.comments %}{% if page.comments %} &#8226; <span class="disqus-comment-count" data-disqus-identifier="{{ page.slug }}">Disqus Comment Count</span><!--<a href="#disqus_thread" data-disqus-identifier="{{ page.slug }}"></a>-->{% else %} &#8226; 0 Comments (disabled){% endif %}{% endif %}</p>
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if site.comments %}{% if page.comments %} &#8226; <a href="#page-comments"><span class="icon icon-comment-empty"></span><span class="disqus-comment-count" data-disqus-identifier="{{ page.slug }}">Comments</span></a>{% else %} &#8226; <span class="icon icon-comment-empty"></span> 0 Comments (disabled){% endif %}{% endif %}</p>
   </header>
 
   <div class="post-content" itemprop="articleBody">
@@ -18,12 +18,12 @@ layout: default
 
 <div class="paginator">
   {% if page.next.url %}
-    <a class="prev_page" href="{{ page.next.url }}" title="{{ page.next.title }}">← Newer posts</a>
+    <a class="prev_page" href="{{ page.next.url }}" title="{{ page.next.title }}"><span class="icon icon-point-left"></span> Newer posts</a>
   {% else %}
-  	<span class="prev_page inactive">← Newer posts</span>
+  	<span class="prev_page inactive"><span class="icon icon-point-left"></span> Newer posts</span>
   {% endif %}
   {% if page.previous.url %}
-    <a class="next_page" href="{{ page.previous.url }}" title="{{ page.previous.title }}">Older posts →</a>
+    <a class="next_page" href="{{ page.previous.url }}" title="{{ page.previous.title }}">Older posts <span class="icon icon-point-left"></span></a>
   {% else %}
   	<span class="next_page inactive">Older posts →</span>
   {% endif %}
