Added CSS to capitalize all categories and lowercase all tags.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -184,6 +184,18 @@ blockquote {
 }
 
 /**
+ * Tags and Categories
+ */
+
+.tag {
+  text-transform: lowercase;
+}
+
+.category {
+  text-transform: capitalize;
+}
+
+/**
  * Site header
  */
 
